--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="./assets/images/favicon-32x32.png"
       type="image/x-icon"
     />
-    <title>Social Links</title>
+    <title>Praise|Social Links</title>
   </head>
   <body>
     <div class="card">
